log

Wed 13 Mar 2024 08:48:07 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
77b0551
Wed 13 Mar 2024 08:53:39 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cbfdfa9
Wed 13 Mar 2024 08:59:52 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:1:
exercises.c:47:1: error: expected identifier or ‘(’ before ‘{’ token
   47 | {
      | ^
Compilation failed
93fdd8e
